* Booting servers via the Striker WebUI works again!! This is a major milestone as it's the first function to be restored since starting the (nearly complete) overhaul of the code base. * Created tools/anvil-boot-server which Striker uses over ssh on a node to actually boot the requested server. This allows the use of the existing 'AN::Tools::Cman->boot_server()' logic. * Renamed almost all instances of 'vm' to 'server' in AN::Tools::Striker to get in-line with the main terms used with users. Also changed all instances of 'anvil' to be 'anvil_uuid' and made the 'anvil_name' variable available where Striker or tools need the Anvil! name instead of the UUID. * Moved the old Striker->process_task() over to the new Striker->_process_task() and commented out, for now, methods still to be ported over.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -358,7 +358,7 @@
 	<tr>
 		<td colspan="4">
 			<input type="hidden" name="cluster" value="#!replace!anvil!#">
-			<input type="hidden" name="vm" value="#!replace!server!#">
+			<input type="hidden" name="server" value="#!replace!server!#">
 			<input type="hidden" name="task" value="#!replace!task!#">
 			<input type="hidden" name="device_keys" value="#!replace!device_keys!#">
 			&nbsp;
@@ -1848,22 +1848,22 @@
 <br />
 <!-- end delete-server-footer -->
 
-<!-- start remove-vm-definition-wrong-definition-file -->
+<!-- start remove-server-definition-wrong-definition-file -->
 			<br />
 			<span class="highlight_bad"><b><u>#!string!row_0126!#</u></b></span> #!string!message_0206!#<br />
 			#!replace!message!#<br />
 			#!string!message_0208!#<br />
 			#!string!brand_0011!#<br />
 			<br />
-<!-- end remove-vm-definition-wrong-definition-file -->
+<!-- end remove-server-definition-wrong-definition-file -->
 
-<!-- start remove-vm-definition-failed -->
+<!-- start remove-server-definition-failed -->
 			<br />
 			<span class="highlight_bad"><b>#!string!row_0044!#</b></span>! #!string!message_0068!#<br />
 			#!replace!message!#<br />
 			#!string!brand_0011!#<br />
 			<br />
-<!-- end remove-vm-definition-failed -->
+<!-- end remove-server-definition-failed -->
 
 <!-- start archive-file-failed -->
 			<br />
@@ -2688,7 +2688,7 @@
 <!-- start display-server-details-resources -->
 					<tr>
 						<td class="fixed_width">
-							#!replace!say_vm!#
+							#!replace!say_server!#
 						</td>
 						<td>
 							#!replace!cpu_count!#
@@ -2775,7 +2775,7 @@
 <!-- start display-server-details-entry -->
 					<tr>
 						<td>
-							#!replace!vm_link!#
+							#!replace!server_link!#
 						</td>
 						<td>
 							#!replace!say_node1!#
@@ -3181,8 +3181,8 @@
 	</tr>
 	<tr>
 		<td class="td_hidden">
-			<!-- vm_state_and_control_panel -->
-			#!replace!vm_state_and_control_panel!#
+			<!-- server_state_and_control_panel -->
+			#!replace!server_state_and_control_panel!#
 		</td>
 	</tr>
 	<tr>
