* Fixed several bugs and got stopping of servers working. Progress! * Fixed the display LVs for running servers. * Fixed some old/bad references to cgi::anvil -> cgi::anvil_uuid and cgi::vm -> cgi::server.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2547,40 +2547,40 @@
 
 <!-- start display-details-free-resources-entry -->
 					<tr>
-						<td>
+						<td class="fixed_width">
 							#!replace!total_cores!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!total_threads!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!allocated_cores!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!real_total_ram!# (#!replace!say_total_ram!#)
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_allocated_ram!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_free_ram!#
 						</td>
-						<td>
-							<span class="fixed_width">#!replace!say_vg!#</span>
+						<td class="fixed_width">
+							#!replace!say_vg!#
 						</td>
 						<td>
 							#!string!message_0270!#
 						</td>
-						<td>
-							<span class="fixed_width">#!replace!say_pv_name!#</span>
+						<td class="fixed_width">
+							#!replace!say_pv_name!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_vg_size!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_vg_used!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_vg_free!#
 						</td>
 					</tr>
@@ -2690,16 +2690,16 @@
 						<td class="fixed_width">
 							#!replace!say_server!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!cpu_count!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_ram!#
 						</td>
 						<td class="fixed_width">
 							#!replace!lv_path!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!lv_size!#
 						</td>
 						<td>
@@ -2979,13 +2979,13 @@
 						<td>
 							#!replace!say_node2_mounted!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_size!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_used!# / #!replace!say_used_percent!#
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_free!#
 						</td>
 					</tr>
