* Added the 'node_name' to the returned values from 'AN::Tools::Cman->find_node_in_cluster(). Also broke the 'elsif' to independently check node 2 if node 1 didn't work. * Update 'AN::Tools::Get->local_anvil_details() to now use the ScanCore database data. Cleaned up '->node_info()' as well. * Added some more methods to 'AN::Tools::Striker'; ** _confirm_delete_server ** _confirm_force_off_server ** _confirm_migrate_server ** _delete_server ** _force_off_server ** _migrate_server
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -1127,6 +1127,30 @@
 <br />
 <!-- end confirm-stop-server -->
 
+<!-- start force-off-server-aborted -->
+<table>
+	<tr>
+		<td class="highlight_warning_bold">
+			#!string!warning_title_0010!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+			<br />
+			#!replace!message!#<br />
+			#!string!message_0186!#<br />
+			<br />
+		</td>
+	</tr>
+	<tr>
+		<td>
+			&nbsp;
+		</td>
+	</tr>
+</table>
+<br />
+<!-- end force-off-server-aborted -->
+
 <!-- start confirm-force-off-server -->
 <table>
 	<tr>
@@ -1639,7 +1663,7 @@
 	<tr>
 		<td>
 			<br />
-			It appears that the node has already joined the #!string!brand_0003!#.<br />
+			#!string!notice_message_0015!#<br />
 			#!string!message_0186!#<br />
 			<br />
 		</td>
