* Fixed a bug where log_level 3 caused an infinite loop processing template files. * Removed server hash keys from using 'vm:' as a prefix because foop damned that was endlessly annoying. * Created 'AN::Tools::Striker' ** _archive_file ** _server_eject_media ** _server_insert_media ** _update_server_definition * Fixed several bugs induced by recent commits. The main page and configure render again.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2712,7 +2712,7 @@
 <!-- start display-server-details-resources -->
 					<tr>
 						<td class="fixed_width">
-							#!replace!say_server!#
+							#!replace!server!#
 						</td>
 						<td class="fixed_width">
 							#!replace!cpu_count!#
