* Created AN::Tools::MediaLibrary which will hold the migrated MediaLibrary.pm methods. * Removed some more cruft from the core striker program. Also created a template to redirect to cgi-bin/configure if no cgi::anvil_uuid is passed in. * Fixed a bug with 'AN::Tools::Striker->mark_node_as_clean_on() when it was trying to update by host_name instead of host_uuid. Also fixed a bug where it read the old health from the local host instead of the target's UUID. * Added 'host_uuid' as a returned value 'AN::Tools::ScanCore->parse_anvil_data()'. * Update 'AN::Tools::Striker->scan_node()' to call '->mark_node_as_clean_on()' if it connected to it properly. * Fixed bugs related to deleting servers (needs more testing) and migrating servers. * Added the ability to log DB transactions in 'striker' and 'MediaLibrary'.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -95,6 +95,17 @@
 	</tr>
 <!-- end configure-menu-entry -->
 
+<!-- start redirect-to-configure -->
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Striker</title>
+	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/configure">
+</head>
+<body>
+	#!string!message_0484!#
+</body>
+<!-- end redirect-to-configure -->
+
 <!-- start configure-anvil-entry -->
 	<tr>
 		<td class="button">
