--- a/html/skins/alteeve/lsi-storage.html
+++ b/html/skins/alteeve/lsi-storage.html
@@ -46,13 +46,13 @@
 			<table width="100%">
 				<tr>
 					<td colspan="3">
-						<b><span class="fixed_width">#!replace!anvil!# - #!replace!node_anvil_name!#</span></b>
+						<b><span class="fixed_width">#!replace!anvil!# - #!replace!node_name!#</span></b>
 					</td>
 				</tr>
 				<tr>
 					<td colspan="3">
 						<br />
-						Status and Managerment of <span class="highlight_detail">#!replace!node!#</span>'s Storage<br />
+						#!replace!message!#<br />
 						<br />
 					</td>
 				</tr>
