* MAJOR MILESTONE!! \o/ * A full install is still needed, and certainly many many bugs remain, but the code migration/rebasing IS DONE! Once testing is done, the old 'cgi-bin/lib' modules will be deleted. * I still need to move the variables out of striker.conf into ScanCore's DB, and make a function to view/edit/reset/delete those, but that is a new feature and not part of the rebase. * OK, changes; * Updated 'AN::Tools::InstallManifest.pm' to put the current IP address of each node (and update it when changed) into the same '$an->data->{sys}{anvil}{nodeX}{Y}' hashes as is used elsewhere in the program, and then updated all AN::Tools::Remote->remote_call()' method calls to use the same 'target', 'port' and 'password' arguments as is used elsewhere. Also updated all references to '$an->data->{node}{$node}' to have '$node' be the name of the node instead of the IP. This provides consistency when the IP changes and cleans up the code a good amount. Also created the following new methods; ** map_network_on_node ** sanity_check_manifest_answers ** show_summary_manifest * Fixed many bugs in 'AN::Tools::InstallManifest.pm' as well so that it now can get to the part where it asks the user to remap the network. Beyond that is untested, but to that is now working. * Cleaned up 'AN::Tools::InstallManifest.pm->get_partition_data()' to properly skip DRBD devices and to not use pool2 when it's not set (which it never is now that pool2 support is disabled). * Moved these functions from 'AN::Tools::Striker' to 'AN::Tools::InstallManifest'; ** confirm_install_manifest_run ** show_existing_install_manifests * Added log variables up to 23 count to tools.xml. * Fixed 'configure's initialization to be similar to the initialization used by 'striker' and 'mediaLibrary' until a cleaner solution can be implemented. * Updated 'configure' to remove the last of the old calls to InstallManifest.pm and Cluster.pm. It now can handle Install Manifests using just the new methods. Also added a boat

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -749,21 +749,22 @@
 		</td>
 		<td>
 			<input type="submit" name="confirm" id="confirm" value="#!string!button_0052!#" class="bold_button" />
-			<input type="hidden" name="config" id="config" value="true" />
-			<input type="hidden" name="task" id="task" value="create-install-manifest" />
-			<input type="hidden" name="do" id="do" value="new" />
-			<input type="hidden" name="run" id="run" value="#!replace!run!#" />
 			
-			<input type="hidden" name="striker_user" value="#!replace!striker_user!#" />
-			<input type="hidden" name="striker_database" value="#!replace!striker_database!#" />
-			<input type="hidden" name="anvil_striker1_user" value="#!replace!anvil_striker1_user!#" />
-			<input type="hidden" name="anvil_striker1_password" value="#!replace!anvil_striker1_password!#" />
-			<input type="hidden" name="anvil_striker1_database" value="#!replace!anvil_striker1_database!#" />
-			<input type="hidden" name="anvil_striker2_user" value="#!replace!anvil_striker2_user!#" />
-			<input type="hidden" name="anvil_striker2_password" value="#!replace!anvil_striker2_password!#" />
-			<input type="hidden" name="anvil_striker2_database" value="#!replace!anvil_striker2_database!#" />
-			<input type="hidden" name="anvil_mtu_size" value="#!replace!anvil_mtu_size!#" />
-			
+			<!-- hidden stuff -->
+			<input type="hidden" name="config"                  id="config"                  value="true" />
+			<input type="hidden" name="task"                    id="task"                    value="manifests" />
+			<input type="hidden" name="do"                      id="do"                      value="new" />
+			<input type="hidden" name="run"                     id="run"                     value="#!replace!run!#" />
+			<input type="hidden" name="manifest_uuid"           id="manifest_uuid"           value="#!replace!manifest_uuid!#" />
+			<input type="hidden" name="striker_user"            id="striker_user"            value="#!replace!striker_user!#" />
+			<input type="hidden" name="striker_database"        id="striker_database"        value="#!replace!striker_database!#" />
+			<input type="hidden" name="anvil_striker1_user"     id="anvil_striker1_user"     value="#!replace!anvil_striker1_user!#" />
+			<input type="hidden" name="anvil_striker1_password" id="anvil_striker1_password" value="#!replace!anvil_striker1_password!#" />
+			<input type="hidden" name="anvil_striker1_database" id="anvil_striker1_database" value="#!replace!anvil_striker1_database!#" />
+			<input type="hidden" name="anvil_striker2_user"     id="anvil_striker2_user"     value="#!replace!anvil_striker2_user!#" />
+			<input type="hidden" name="anvil_striker2_password" id="anvil_striker2_password" value="#!replace!anvil_striker2_password!#" />
+			<input type="hidden" name="anvil_striker2_database" id="anvil_striker2_database" value="#!replace!anvil_striker2_database!#" />
+			<input type="hidden" name="anvil_mtu_size"          id="anvil_mtu_size"          value="#!replace!anvil_mtu_size!#" />
 			<input type="hidden" name="anvil_bcn_ethtool_opts"  id="anvil_bcn_ethtool_opts"  value="#!replace!anvil_bcn_ethtool_opts!#" />
 			<input type="hidden" name="anvil_bcn_network"       id="anvil_bcn_network"       value="#!replace!anvil_bcn_network!#" />
 			<input type="hidden" name="anvil_sn_ethtool_opts"   id="anvil_sn_ethtool_opts"   value="#!replace!anvil_sn_ethtool_opts!#" />
@@ -1175,7 +1176,7 @@
 			<textarea name="manifest_data" id="manifest_data" class="textarea_huge">#!replace!manifest_data!#</textarea>
 			<input type="hidden" name="manifest_uuid" id="manifest_uuid" value="#!replace!manifest_uuid!#">
 			<input type="hidden" name="raw" id="raw" value="true">
-			<input type="hidden" name="task" id="task" value="create-install-manifest">
+			<input type="hidden" name="task" id="task" value="manifests">
 			<input type="hidden" name="config" id="config" value="true">
 		</td>
 	</tr>
