* Fixed a bug in 'AN::Tools::Striker->scan_node()' where it would try to connect to the node using the remote_ip, even if it wasn't set. * Updated 'AN::Tools::Check->access()' to return an empty string instead of '2' when a target isn't passed in. * Updated 'AN::Tools::Check->daemon()' to add 'timeout 30' to the status check if the daemon is 'clvmd' as it has a habit of hanging when both nodes are in the cluster but clvmd is only running on one node (which is the case during the 'anvil-safe-start' run). * Added the 'sys::log::log_pid = [0,1]' variable that 'AN::Tools::Log->entry()' checks. If set to '1', the current PID is logged to help dubug what messages below to what script. * Fixed 'AN::Tools::ScanCore->target_power()' to properly tune the power_check cache value so that it works as intended. * Updated 'AN::Tools::Striker->_fence_node()' to always call the fence from the Striker dashboard, rather than using the peer when it is available. This avoids delays (when node 2 fences node 1) and it removes the potential of a hung cluster blocking the fence request (may or may not have been a problem on its own). * Updated the HTML templatelets for fencing nodes to display more cleanly.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2122,12 +2122,12 @@
 <!-- start fence-node-header -->
 <table>
 	<tr>
-		<td class="highlight_warning_bold">
+		<td class="highlight_warning_bold" colspan="2">
 			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
-		<td>
+		<td colspan="2">
 			#!replace!message!#<br />
 		</td>
 	</tr>
@@ -2135,7 +2135,7 @@
 
 <!-- start fence-node-output-header -->
 	<tr>
-		<td class="fixed_width">
+		<td class="fixed_width" colspan="2">
 			<br />
 <!-- end fence-node-output-header -->
 
@@ -2148,6 +2148,9 @@
 <!-- start fence-node-message -->
 	<tr>
 		<td>
+			#!replace!status!#<br />
+		</td>
+		<td>
 			#!replace!message!#<br />
 		</td>
 	</tr>
@@ -2155,7 +2158,7 @@
 
 <!-- start fence-node-unfence-header -->
 	<tr>
-		<td class="fixed_width">
+		<td class="fixed_width" colspan="2">
 			<br />
 <!-- end fence-node-unfence-header -->
 
@@ -2167,7 +2170,7 @@
 
 <!-- start fence-node-aborted-header -->
 	<tr>
-		<td class="highlight_bad_bold">
+		<td class="highlight_bad_bold" colspan="2">
 			#!replace!title!#
 		</td>
 	</tr>
@@ -2175,7 +2178,7 @@
 
 <!-- start fence-node-abort-reason -->
 	<tr>
-		<td>
+		<td colspan="2">
 			<br />
 			#!replace!reason!#<br />
 			<br />
@@ -2185,7 +2188,7 @@
 
 <!-- start fence-node-footer -->
 	<tr>
-		<td>
+		<td colspan="2">
 			&nbsp;
 		</td>
 	</tr>
