* Patched 'AN::Tools::Striker->mark_node_as_clean_on()' to use both a node_uuid or host_uuid. This will be cleaned up later. * Removed the message shown about not being able to access the nodes when we know they're both off. * Fixed Striker to properly display the menu when both nodes are off and got powering on nodes working. * Cleaned up some displayed messages. * Added a call to 'AN::Tools::ScanCore->update_server_stop_reason()' to clear the stop reason when a user boots a server. * Added 'libvirt-guests' to the list of daemons to disable to address issue #74. * Fixed anvil-safe-start to honour a user's stopped server and not boot it back up when it runs.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -1998,6 +1998,17 @@
 			<table class="hidden_table" width="100%">
 <!-- end dual-boot-header -->
 
+<!-- start dual-boot-shell-output -->
+				<tr>
+					<td style="border: 1px solid white;" class="fixed_width">
+						#!replace!status!#
+					</td>
+					<td style="border: 1px solid white;" class="fixed_width" align="left">
+						#!replace!message!#
+					</td>
+				</tr>
+<!-- end dual-boot-shell-output -->
+
 <!-- start dual-boot-footer -->
 			</table>
 			<br />
@@ -2498,7 +2509,7 @@
 			#!string!state_0004!#
 		</td>
 		<td>
-			#!string!message_0269!#<br />
+			#!replace!message!#<br />
 		</td>
 	</tr>
 </table>
