* Debugging AN::Tools::InstallManifest and related calls and added a lot of logging towards that effort. * Fixed a bug in 'AN::Tools::Get->manifest_data()' where 'AN::Tools::Validate->is_uuid()' was being called improperly. * Updated 'AN::Tools::InstallManifest->configure_cman()' to generate a new cluster.conf if the version wasn't read properly, regardless of whether somethine was read in. * Fixed a bug in 'AN::Tools::InstallManifest->get_daemon_state()' where the node name was being passed into '->get_daemon_state()' as the target. * Fixed a bug in 'AN::Tools::InstallManifest->configure_network_on_node()' where the 'ifn_bridge1' gateway value was missing a closing quote. Also fixed a bug where the old ifcfg-eth* files were not being deleted. * Fixed a bug in 'AN::Tools::InstallManifest->configure_scancore_on_node()' where the 'AN::Tools::Storage->rsync()' method was being called incorrectly. * Fixed multiple Install Manifest form-related bugs, mostly related to cgi::anvil_nodeX_name' being replaced by 'sys::anvil::nodeX::name' (and the same for sys::anvil::password), calling cgi-bin/striker and missing manifest_uuid. * Added 'AN::Tools::InstallManifest->connect_to_node()' and '->create_shared_lv()' which were missed in the migration. * Updated 'AN::Tools::InstallManifest->do_node_reboot()' to use the 'reboot' command because 'anvil-safe-start' can't find the node's UUID in the ScanCore database that early in the process. * Updated 'AN::Tools::InstallManifest->do_node_reboot()' to properly use the new "node name is hash key" system. * Fixed a bug in 'AN::Tools::InstallManifest->generate_lvm_conf()' where the method's header was the old function style header. * Fixed a bug in 'AN::Tools::InstallManifest->get_storage_pool_partitions()' where the for loop used node1 twice. * Fixed a bug in 'AN::Tools::InstallManifest->map_network()' where the mac hash keys were being blindly blanked (may not have actually been a bug...). * Updated 'AN::Tools::InstallManifest->parse_sc

--- a/html/skins/alteeve/config.html
+++ b/html/skins/alteeve/config.html
@@ -1016,7 +1016,7 @@
 						<input type="hidden" name="config"                       id="config"                       value="true" />
 						<input type="hidden" name="generate"                     id="generate"                     value="true" />
 						<input type="hidden" name="confirm"                      id="confirm"                      value="true" />
-						<input type="hidden" name="task"                         id="task"                         value="create-install-manifest" />
+						<input type="hidden" name="task"                         id="task"                         value="manifests" />
 						<input type="submit" name="do" id="do" value="#!string!button_0047!#" class="bold_button" />
 					</td>
 				</tr>
@@ -1424,7 +1424,7 @@
 						<input type="submit" name="do" id="do" value="#!string!button_0047!#" class="bold_button" />
 						<input type="hidden" name="config" id="config" value="true" />
 						<input type="hidden" name="generate" id="generate" value="true" />
-						<input type="hidden" name="task" id="task" value="create-install-manifest" />
+						<input type="hidden" name="task" id="task" value="manifests" />
 					</td>
 				</tr>
 			</table>
