--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -494,6 +494,8 @@
 			<input type="hidden" name="anvil_node1_current_password" value="#!replace!anvil_node1_current_password!#" />
 			<input type="hidden" name="anvil_node2_current_ip" value="#!replace!anvil_node2_current_ip!#" />
 			<input type="hidden" name="anvil_node2_current_password" value="#!replace!anvil_node2_current_password!#" />
+			
+			<input type="hidden" name="manifest_uuid" value="#!replace!manifest_uuid!#" />
 			<input type="hidden" name="config" value="#!replace!config!#" />
 			<input type="hidden" name="confirm" value="#!replace!confirm!#" />
 			<input type="hidden" name="do" value="#!replace!do!#" />
