--- a/html/skins/alteeve/configure.html
+++ b/html/skins/alteeve/configure.html
@@ -99,7 +99,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Striker</title>
-	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/configure">
+	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=/cgi-bin/configure">
 </head>
 <body>
 	#!string!message_0484!#
