--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -57,7 +57,8 @@
 			<input type="hidden" name="run" value="#!replace!run!#" />
 			<input type="hidden" name="config" value="true" />
 			<input type="hidden" name="do" value="new" />
-			<input type="hidden" name="task" value="create-install-manifest" />
+			<input type="hidden" name="task" value="manifests" />
+			<input type="hidden" name="manifest_uuid" value="#!replace!manifest_uuid!#" />
 			<input type="hidden" name="perform_install" value="Install" />
 			<input type="hidden" name="anvil_node1_bcn_link1_mac" value="#!replace!anvil_node1_bcn_link1_mac!#" />
 			<input type="hidden" name="anvil_node1_bcn_link2_mac" value="#!replace!anvil_node1_bcn_link2_mac!#" />
