* Reworked the "Rack Power Cycle" feature in Striker to check if the local dashboard can access all UPSes on the nodes and disable itself if any can't be reached. It will now always work by calling the UPSes from the dashboard directly. * Updated 'AN::Tools::Check->ping()' to only wait 1 second per ping attempt, reducing the time it takes to determine a target is not accessible. * Temporarily 'die' when ScanCore on a dashboard is about to boot a node. This will be re-enabled in the next commit. * Updated scan-ipmilan to give a 10°C/30sec before a warning is thrown for CPU temperature values. Also cleaned up some comments to wrap at 110 instead of 80 columns.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -3290,6 +3290,54 @@
 	</tr>
 <!-- end watchdog_panel -->
 
+<!-- start watchdog_panel-lost-access -->
+	<tr>
+		<td class="td_hidden">
+			<table width="100%">
+				<tr>
+					<td colspan="3">
+						<b>#!string!title_0182!#</b>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						#!string!row_0285!#
+					</td>
+					<td>
+						<span class="highlight_unavailable">#!string!button_0065!#</span>
+					</td>
+					<td>
+						<span class="highlight_unavailable">#!string!button_0066!#</span>
+					</td>
+				</tr>
+				<tr>
+					<td class="highlight_warning">
+						#!string!row_0044!#
+					</td>
+					<td colspan="2">
+						#!string!explain_0212!#
+					</td>
+				</tr>
+				#!replace!ups_access_list!#
+			</table>
+		</td>
+	</tr>
+<!-- end watchdog_panel-lost-access -->
+
+<!-- start watchdog_panel-lost-access-ups-entry -->
+				<tr>
+					<td>
+						<span class="highlight_detail">#!replace!name!#</span> (<span class="highlight_detail">#!replace!ip!#</span>):
+					</td>
+					<td>
+						#!replace!access!#
+					</td>
+					<td>
+						&nbsp;
+					</td>
+				</tr>
+<!-- end watchdog_panel-lost-access-ups-entry -->
+
 <!-- start anvil_safe_start_notice -->
 	<tr>
 		<td class="td_hidden">
