* Created 'AN::Tools::Striker->_check_peer_access()' that checks to see of all three links between the target and it's peer are up and checks to see if cman is running on the peer or not. * Updated 'AN::Tools::Striker->_process_task()' to call '->_check_peer_access()' and, if all is well, join without confirming. If something is wrong, then the confirmation window will be shown and now include a reason as to why confirmation is being asked. * Updated the USB insert/remove program based on user feedback to be more resilient/tolerant of a USB drive being rapidly inserted/ejected.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -845,8 +845,7 @@
 		<td>
 			<br />
 			#!replace!message!#<br />
-			#!string!message_0149!#<br />
-			#!string!message_0148!#<br />
+			#!replace!reason!#<br />
 			<br />
 		</td>
 	</tr>
