--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -3284,6 +3284,7 @@
 						<a href="#!replace!power_off!#">#!string!button_0066!#</a>
 					</td>
 				</tr>
+				#!replace!ups_access_list!#
 			</table>
 		</td>
 	</tr>
@@ -3323,7 +3324,7 @@
 	</tr>
 <!-- end watchdog_panel-lost-access -->
 
-<!-- start watchdog_panel-lost-access-ups-entry -->
+<!-- start watchdog_panel_ups_entry -->
 				<tr>
 					<td>
 						<span class="highlight_detail">#!replace!name!#</span> (<span class="highlight_detail">#!replace!ip!#</span>):
@@ -3335,7 +3336,7 @@
 						&nbsp;
 					</td>
 				</tr>
-<!-- end watchdog_panel-lost-access-ups-entry -->
+<!-- end watchdog_panel_ups_entry -->
 
 <!-- start anvil_safe_start_notice -->
 	<tr>
