* Fixed a bug where provisioning a server when 2+ Anvil! systems were defined caused Striker to return to the Anvil! selection screen. * Started work to improve the auto-select of the cgi::anvil_uuid variable.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -764,7 +764,7 @@
 	</tr>
 	<tr>
 		<td colspan="3">
-			<input type="hidden" name="cluster" value="#!replace!anvil!#">
+			<input type="hidden" name="anvil_uuid" value="#!replace!anvil_uuid!#">
 			<input type="hidden" name="task" value="#!replace!task!#">
 			<input type="hidden" name="max_ram" value="#!replace!max_ram!#">
 			<input type="hidden" name="max_cores" value="#!replace!max_cores!#">
