* Note: Untested code, likely broken. * Changed 'Get->shared_files()' to mark a file as an ISO if the end of the file is '.iso' (instead of anywhere in the file name being '.iso'). * Updated 'MediaLibrary->_confirm_delete_file()' to now check for servers using a file that is about to be deleted and tell the user that servers will be automatically updated to remove the file (pre/post migration scripts and mounted disc images). Updated 'MediaLibrary->_delete_file()' to remove the deleted files. * Created 'ScanCore->insert_or_update_servers()' to simplify/standardize how a server's ScanCore DB entry is created/updated. * Deleted 'Striker->_update_server_definition_in_db()' and updated '->_update_server_definition()' to call the new 'ScanCore->insert_or_update_servers()' method. Also updated this method to use the parameter 'server_name' instead of simply 'server'. * Updated 'Striker->_server_eject_media()' to take 'quiet' which, when set, silences the messages printed to screen. * Updated 'Striker->_manage_server()' to update the contents of the '$an->data->{server}{$server}{definition}' hash to reflect the changes, which should close issue #86. * Started updating the 'scan-server' scan agent to auto-update servers if a file in '/shared/files' is manually deleted. * Commented out the in-progress DR functions. They will be completed in v2.1 now.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -484,6 +484,11 @@
 	</tr>
 	<tr>
 		<td colspan="3">
+			#!replace!warning!#
+		</td>
+	</tr>
+	<tr>
+		<td colspan="3">
 			<div class="align_right">#!replace!confirm_button!#</div>
 		</td>
 	</tr>
@@ -509,6 +514,11 @@
 <!-- end file-delete-header -->
 
 <!-- start file-delete-footer -->
+	<tr>
+		<td colspan="3">
+			#!replace!warning!#
+		</td>
+	</tr>
 	<tr>
 		<td colspan="3" class="highlight_ready_bold">
 			#!string!message_0120!#
