--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -7,13 +7,6 @@
 		</td>
 	</tr>
 	<tr>
-		<td colspan="3">
-			<br />
-			#!string!title_0172!#<br />
-			<br />
-		</td>
-	</tr>
-	<tr>
 		<td class="highlight_good_bold">
 			&nbsp;
 		</td>
@@ -110,7 +103,10 @@
 		<td class="highlight_good_bold">
 			&nbsp;
 		</td>
-		<td>
+		<td class="highlight_ready_bold">
+			#!string!state_0009!#
+		</td>
+		<td class="highlight_ready_bold">
 			#!string!state_0009!#
 		</td>
 	</tr>
@@ -273,13 +269,9 @@
 	</tr>
 	<tr>
 		<td colspan="4">
-			<br />
-			#!string!explain_0131!#<br />
-			 <ul>
-				<li>#!string!explain_0134!#</li>
-				<li>#!string!explain_0133!#</li>
-				<li>#!string!explain_0132!#</li>
-			</ul>
+			#!string!explain_0134!#<br />
+			#!string!explain_0133!#<br />
+			#!string!explain_0132!#<br />
 		</td>
 	</tr>
 	<tr>
