--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -357,6 +357,7 @@
 	#!replace!server_note!#
 	<tr>
 		<td colspan="4">
+			<input type="hidden" name="anvil_uuid" value="#!replace!anvil_uuid!#">
 			<input type="hidden" name="cluster" value="#!replace!anvil!#">
 			<input type="hidden" name="server" value="#!replace!server!#">
 			<input type="hidden" name="task" value="#!replace!task!#">
