NOTE: Untested commit.
* Updated tools/anvil-download-file to support --status to show the current status of download{ed,ing} files. Also added a expiry timer to delete progress files that haven't changed in a while.
* Updated MediaLibrary->_download_url() to call tools/anvil-download-file. Created ->_monitor_downloads() to monitor downloads, but this isn't done yet.

Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -802,3 +802,32 @@
 </table>
 <br />
 <!-- end read-shared-no-access -->
+
+<!-- start download_error -->
+<table>
+	<tr>
+		<td class="highlight_warning">
+			#!string!row_0133!#
+		</td>
+		<td>
+			#!replace!message!#
+		</td>
+	<tr>
+</table>
+<br />
+<!-- end download_error -->
+
+<!-- start download_started -->
+<table>
+	<tr>
+		<td class="highlight_good">
+			#!string!row_0133!#
+		</td>
+		<td>
+			#!replace!message!#
+		</td>
+	<tr>
+</table>
+<META HTTP-EQUIV="Refresh" CONTENT="#!replace!reload_time!#; URL=#!replace!redirect_url!#">
+<br />
+<!-- end download_started -->
